# sqlib

./: NOTICE.txt  README.md  pyproject.toml  requirements.txt  setup.py  sqlib.py
modules/: connection.py  create.py  select.py
sqlib/: __init__.py  sqlib.py
sqlib/modules/: connection.py  create.py  insert.py  select.py
